# parakeet

./: .gitignore  README.md  package-lock.json  package.json
Client/: index.handlebars
database/migrations/: 20220911183550_create-tables.sql
plume/: Cargo.toml
plume/src/: config.rs  main.rs  parse.rs
public/: index.html
roost/: Cargo.toml  Rocket.toml
roost/database/migrations/: 20220908124019_create-models-table.sql
roost/src/: database.rs  main.rs  manager.rs
src/: CanvasElements.js  GalleryView.css  GalleryView.js  ModelInfo.js  ModelView.css  ModelView.js  ParameterElements.js  STLElements.js  Toolbar.js  index.js
