[package]
name = "plume"
version = "0.1.0"
authors = ["MetallicSquid"]
edition = "2021"
license = "GPL-3.0-or-later"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/MetallicSquid/parakeet"
repository = "https://github.com/MetallicSquid/parakeet"
keywords = ["cli", "parakeet", "tool"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "0.4"
sqlx = { version = "0.6", default_features = false, features = ["sqlite", "runtime-tokio-rustls", "migrate", "macros", "offline"] }
tokio = { version = "1.21", features = ["macros"] }

