[package]
name = "roost"
version = "0.1.0"
authors = ["MetallicSquid"]
edition = "2021"
license = "GPL-3.0-or-later"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/MetallicSquid/parakeet"
repository = "https://github.com/MetallicSquid/parakeet"
keywords = ["cli", "parakeet", "tool"]
categories = ["command-line-utilities"]

[dependencies]
rocket = { version = "0.5.0-rc.2", features=["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "0.4"
sqlx = { version = "0.5", default_features = false, features = ["runtime-tokio-rustls", "migrate", "macros", "offline"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"] }
